--- a/templates/number.html
+++ b/templates/number.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Your future </title>
+    <title>Count </title>
     <link rel="stylesheet" href="style/style.css">
   </head>
 
   <body>
-    <h1> This is your fortune </h1>
-    <p> Hi {{user_name}} from {{user_location}}, here is your fortune </p><br>
+    <h1> My favorite number is {{user_num}} </h1>
+    <p> Your name, location, and fortune will be displayed shortly! </p><br>
     <img src="http://accesschinese.com/images/Crack-Fortune-Cookie.png">
   </body>
 </html>
